Fixed overlapping className

--- a/src/Components/Progress.css
+++ b/src/Components/Progress.css
@@ -42,7 +42,7 @@
 
 }
 
-.percentage {
+.percent {
     font-size: 33px;
     font-weight: bold;
 }
